rust/crates/rax-nmea/src/sentence/snapshots/rax_nmea__sentence__gsa__test__new_gsa_with_system_id.snap
---
source: crates/rax-nmea/src/sentence/gsa.rs
expression: gsa
---
{
  "op_mode": "Automatic",
  "nav_mode": "Fix3D",
  "svid": [
    5,
    7,
    13,
    14,
    15,
    17,
    19,
    23,
    24
  ],
  "pdop": 1.0,
  "hdop": 0.7,
  "vdop": 0.7,
  "system_id": null
}
