rust/crates/rax-nmea/src/sentence/snapshots/rax_nmea__sentence__gsa__test__new_gsa_without_system_id.snap
---
source: crates/rax-nmea/src/sentence/gsa.rs
expression: gsa
---
{
  "op_mode": "Automatic",
  "nav_mode": "Fix3D",
  "svid": [
    5,
    7,
    8,
    10,
    15,
    17,
    18,
    19,
    30
  ],
  "pdop": 1.2,
  "hdop": 0.9,
  "vdop": 0.8,
  "system_id": null
}
